--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,9 @@
 
     <div ui-view></div>
 
+    <!-- Footer -->
+    <footer ng-include src="'/app/components/footer/footer.html'"></footer>
+
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
