--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="mangaRai">
+<html>
   <head>
     <meta charset="utf-8">
     <title>mangaRai</title>
@@ -24,12 +24,19 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ui-view></div>
+    <div class="container" ng-app="mangaRai">
+        <div class="row">
+            <nav ng-include src="'app/views/nav.html'"></nav>
+
+            <main class="app-view">
+                <div class="large-12 small-12 columns app-body">
+                    <div ui-view></div>
+                </div>
+            </main>
+        </div>
+    </div>
 
     <!-- Footer -->
-    <footer ng-include src="'/components/footer/footer.html'">
-
-    </footer>
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
