Added Infinte Scrolling On Recent

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>mangaRai</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <base href="/">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -34,7 +35,9 @@
                 </div>
             </main>
         </div>
+        <div ui-view="reading" class="manga-read"></div>
     </div>
+
 
     <!-- Footer -->
     <!-- build:js(src) scripts/vendor.js -->
